Все синхронные операции удалены